--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
 <title>Daniela Muñoz</title>
 <!-- Search Engine -->
 <meta name="description" content="Estudiante de Diseño UC. Interesada por el diseño gráfico y textil. Portafolio online.">
-<meta name="image" content="cambiar por una URL, debes deben la imagen en línea">
+<meta name="image" content="https://raw.githubusercontent.com/Damzoni/munoz_daniela/master/media/meta-name-image.jpg">
 <!-- Schema.org for Google -->
-<meta itemprop="name" content="cambiar">
-<meta itemprop="description" content="cambiar">
+<meta itemprop="name" content="Damzoni">
+<meta itemprop="description" content="Una pequeña diseñadora queriendo ser.">
 <meta itemprop="image" content="cambiar por una URL, deben poner la imagen en línea">
 <!-- Twitter -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="cambiar">
-<meta name="twitter:description" content="cambiar">
+<meta name="twitter:site" content="@damzoni"/>
+<meta name="twitter:title" content="Cosas que pasan">
+<meta name="twitter:description" content="No suelo usar twitter muy a menudo, pero si pasa algo importante, es interesante leer opiniones variadas del caso">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-<meta name="og:title" content="cambiar">
-<meta name="og:description" content="cambiar">
+<meta name="og:title" content="Un Facebook para mi">
+<meta name="og:description" content="Centro donde comparto mi vida con cercanos... y veo memes.">
 <meta name="og:image" content="cambiar">
-<meta name="og:url" content="cambiar">
-<meta name="og:site_name" content="cambiar">
+<meta name="og:url" content="https://www.facebook.com/daniela.munozfilippig">
+<meta name="og:site_name" content="daniela.munozfilippig">
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
 <!--ahora vinculamos los estilos-->
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700" type="text/css">
+<link rel="stylesheet" href="https://fonts.google.com/specimen/Roboto+Condensed?selection.family=Roboto+Condensed" type="text/css">
 <link rel="stylesheet" href="estilo.css" type="text/css">
 </head>
 <body>
@@ -262,3 +263,4 @@ var msnry = new Masonry( portafolio, {
 </script>
 </body>
 </html>
+
